syntax = "proto3";

// This is the file format for what is known as a "field file" which just encodes the distances to the nearest line
// for each cell in a unit, for example, every 2cm. It is generated by scripts/field_file_generator.py
message FieldFile {
    // the size of each grid cell in cm
    int32 unitDistance = 1;
    // the number of cells in the field file
    int32 cellCount = 2;
    // the width of the field in cm
    int32 fieldWidth = 3;
    // the height of the field in cm
    int32 fieldHeight = 4;
    // the actual data of the field file, which is the distance from each cell to the nearest line
    repeated float data = 5;
}